@@ -1,3 +1,5 @@
+* Improve computation precision of UOM convertion
+
 Version 1.4.0 - 2009-10-19
 * Bug fixes (see mercurial logs for details)
 
